added recyclerview funactiality and MVVM skeleton

--- a/app/src/main/res/layout/activity_station_selection.xml
+++ b/app/src/main/res/layout/activity_station_selection.xml
@@ -10,26 +10,38 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="8dp"
             tools:context=".NewJourneyActivity">
 
+
         <TextView
-                android:id="@+id/header"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="New journey"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:textColor="#5B3198"
-                android:gravity="center"
-                android:layout_marginTop="300dp"
-                app:layout_constraintBottom_toTopOf="@+id/form_container"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+            android:id="@+id/appTitle"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:gravity="center_vertical"
+            android:text="     Track Travel Disruptions"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="parent"
+            android:background="#301466" />
+
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:gravity="bottom|center"
+            android:textSize="35sp"
+            android:text="New Journey"
+            android:textColor="#5c3d99"
+            app:layout_constraintTop_toBottomOf="@id/appTitle"
+            app:layout_constraintBottom_toTopOf="@+id/form_container"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.cardview.widget.CardView
                 android:id="@+id/form_container"
                 android:layout_width="0dp"
+                android:layout_margin="8dp"
                 android:layout_height="wrap_content"
 
                 app:cardBackgroundColor="#7DE09D"
@@ -41,7 +53,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
+                    android:layout_height="450dp"
                     android:padding="8dp">
 
                 <LinearLayout
@@ -74,13 +86,13 @@
                                 android:id="@+id/from_label"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="From:"
+                                android:text="From: "
                                 android:textSize="16sp"
                                 android:textStyle="bold"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"/>
 
-                        <EditText
+                        <TextView
                                 android:id="@+id/from_input"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
@@ -89,20 +101,23 @@
                                 app:layout_constraintTop_toTopOf="@id/from_label"
                                 app:layout_constraintStart_toEndOf="@id/from_label"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintBottom_toBottomOf="@id/from_label"/>
+                                app:layout_constraintBottom_toBottomOf="@id/from_label"
+                                android:background="@drawable/borderbox"
+
+                            />
 
                         <TextView
                                 android:id="@+id/to_label"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="16dp"
-                                android:text="To:"
+                                android:text="To: "
                                 android:textSize="16sp"
                                 android:textStyle="bold"
                                 app:layout_constraintTop_toBottomOf="@id/from_input"
-                                app:layout_constraintStart_toStartOf="parent"/>
+                                app:layout_constraintEnd_toEndOf="@+id/from_label"/>
 
-                        <EditText
+                        <TextView
                                 android:id="@+id/to_input"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
@@ -111,7 +126,8 @@
                                 app:layout_constraintTop_toTopOf="@id/to_label"
                                 app:layout_constraintStart_toEndOf="@id/to_label"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintBottom_toBottomOf="@id/to_label"/>
+                                app:layout_constraintBottom_toBottomOf="@id/to_label"
+                                android:background="@drawable/borderbox"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
