--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -2,5 +2,5 @@
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
            android:shape="oval">
-    <solid android:color="#5B3198"/> <!-- Background color -->
+    <solid android:color="#5C3D99"/> <!-- Background color -->
 </shape>
