--- a/app/src/main/res/layout/item_layout_main.xml
+++ b/app/src/main/res/layout/item_layout_main.xml
@@ -5,6 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/item_bg"
     >
+    <data>
+        <variable
+            name="journey"
+            type="com.example.tracktraveldisruptionsapp.model.Journey" />
+        <variable
+            name="journeyLeg"
+            type="com.example.tracktraveldisruptionsapp.model.JourneyLeg" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -46,7 +54,8 @@
             android:id="@+id/cityTo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Birmingham"
+            tools:hint="Birmingham"
+            android:text="@{journey.destination}"
             android:textColor="#5c3d99"
             android:textSize="25sp"
             app:layout_constraintStart_toEndOf="@+id/header_title"
@@ -72,7 +81,9 @@
                 />
             <TextView
                 android:id="@+id/fromText"
-                android:hint="London"
+                tools:hint="London"
+                android:text="@{journey.origin}"
+
                 />
         </TableRow>
 
@@ -86,7 +97,8 @@
                 />
             <TextView
                 android:id="@+id/toText"
-                android:hint="Birmingham"
+                tools:hint="Birmingham"
+                android:text="@{journey.destination}"
                 />
         </TableRow>
 
@@ -165,7 +177,8 @@
                 />
             <TextView
                 android:id="@+id/departTimeText"
-                android:hint="14.00"
+                tools:hint="14.00"
+                android:text="@{journey.departureTime}"
                 />
         </TableRow>
 
@@ -178,7 +191,8 @@
                 />
             <TextView
                 android:id="@+id/TransportText"
-                android:hint="Train"
+                tools:hint="Train"
+                android:text="@{journeyLeg.transportProvider}"
                 />
         </TableRow>
 
