--- a/app/src/main/res/layout/item_layout_main.xml
+++ b/app/src/main/res/layout/item_layout_main.xml
@@ -26,6 +26,7 @@
         app:layout_constraintTop_toBottomOf="@id/heading"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="10dp"
+        android:paddingBottom="15dp"
         />
 
 
