--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:backgroundTint="#38A3A5" />
 
+    <ImageView
+        android:id="@+id/noJourneyImg"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/pinpathimg"
+        android:layout_marginTop="150dp"
+        app:layout_constraintTop_toTopOf="@id/pageTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
+        />
+
+    <TextView
+        android:id="@+id/noJourneyMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add a journey to get started"
+        android:textStyle="bold"
+        android:textColor="#57cc99"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/noJourneyImg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="invisible"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_marginHorizontal="10dp"
