--- a/app/src/main/res/layout/item_layout_main.xml
+++ b/app/src/main/res/layout/item_layout_main.xml
@@ -209,6 +209,16 @@
         </TableRow>
 
     </TableLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+
+            android:id="@+id/edit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_edit"
+            android:shadowColor="@drawable/item_bg"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="edit"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
