--- a/app/src/main/res/layout/item_layout_disruptions.xml
+++ b/app/src/main/res/layout/item_layout_disruptions.xml
@@ -11,12 +11,40 @@
         <variable
             name="journeyLeg"
             type="com.example.tracktraveldisruptionsapp.model.JourneyLeg" />
+        <variable
+            name="railData"
+            type="com.example.tracktraveldisruptionsapp.model.RailDataDTO" />
     </data>
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="250dp">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:alpha=".45"
+        android:src="@drawable/trainllogo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/statusPic"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/tick"
+        android:layout_margin="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        />
+
     <TextView
+        android:textSize="18sp"
         android:id="@+id/CrsLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,6 +53,7 @@
         android:text="Train: "
         />
     <TextView
+        android:textSize="18sp"
         android:layout_marginTop="10dp"
         android:id="@+id/arrow"
         android:layout_width="wrap_content"
@@ -35,21 +64,50 @@
         android:text=" ➔ "
         />
     <TextView
+        android:textSize="18sp"
         android:id="@+id/originCrs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toStartOf="@+id/arrow"
         app:layout_constraintTop_toTopOf="@id/arrow"
         tools:hint="BHM"
+        android:text="@{railData.departureStationCrs}"
         />
     <TextView
+        android:textSize="18sp"
         android:id="@+id/destinationCrs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/arrow"
         app:layout_constraintTop_toTopOf="@id/arrow"
         tools:hint="LEI"
+        android:text="@{railData.destinationStationCrs}"
         />
+    <TextView
+        android:id="@+id/stdLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scheduled Time:"
+        app:layout_constraintTop_toBottomOf="@+id/CrsLabel"
+        app:layout_constraintStart_toStartOf="@+id/CrsLabel"
+        android:layout_marginTop="10dp"
+        />
+
+    <TextView
+        android:id="@+id/etdLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Estimated Time:"
+        app:layout_constraintStart_toEndOf="@+id/stdLabel"
+        app:layout_constraintTop_toTopOf="@id/stdLabel"
+        android:layout_marginStart="50dp"
+        />
+
+
+
+
+
+
 
 
 
