feat:delete button functionality

--- a/app/src/main/res/layout/activity_edit_journey.xml
+++ b/app/src/main/res/layout/activity_edit_journey.xml
@@ -347,8 +347,19 @@
                 android:text="Next"
                 android:backgroundTint="#38A3A5"
                 android:textColor="#5B3198"
-
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                android:id="@+id/button_delete"
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:text="Delete"
+                android:backgroundTint="#FDD50000"
+                android:textColor="#FFFFFF"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
