initial branch commit

--- a/app/src/main/res/layout/item_layout_disruptions.xml
+++ b/app/src/main/res/layout/item_layout_disruptions.xml
@@ -37,9 +37,9 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/tick"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/CrsLabel"
 
         />
 
@@ -83,25 +83,70 @@
         tools:hint="LEI"
         android:text="@{railData.destinationStationCrs}"
         />
+
+    <LinearLayout
+        android:id="@id/stdLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/CrsLabel"
+        app:layout_constraintStart_toEndOf="@+id/statusPic"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        >
     <TextView
         android:id="@+id/stdLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Scheduled Time:"
-        app:layout_constraintTop_toBottomOf="@+id/CrsLabel"
-        app:layout_constraintStart_toStartOf="@+id/CrsLabel"
         android:layout_marginTop="10dp"
         />
+        <TextView
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:id="@+id/std"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:hint="00:00"
+            android:text="@{railData.std}"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="@id/etdLabel"
+            app:layout_constraintTop_toBottomOf="@id/etdLabel"
+            />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/stdLayout"
+        android:layout_marginEnd="20dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        >
     <TextView
         android:id="@+id/etdLabel"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Estimated Time:"
-        app:layout_constraintStart_toEndOf="@+id/stdLabel"
-        app:layout_constraintTop_toTopOf="@id/stdLabel"
-        android:layout_marginStart="50dp"
+
         />
+
+    <TextView
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:id="@+id/etd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:hint="On Time"
+        android:text="@{railData.etd}"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="@id/etdLabel"
+        app:layout_constraintTop_toBottomOf="@id/etdLabel"
+
+        />
+    </LinearLayout>
 
 
 
