--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,85 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.main.MainActivity">
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.main.MainActivity">
+        <TextView
+                android:id="@+id/appTitle"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center_vertical"
+                android:text="     Track Travel Disruptions"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="#301466"/>
 
-    <TextView
-        android:id="@+id/appTitle"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:gravity="center_vertical"
-        android:text="     Track Travel Disruptions"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintStart_toEndOf="parent"
-        android:background="#301466" />
+        <TextView
+                android:id="@+id/pageTitle"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:gravity="bottom|center"
+                android:textSize="35sp"
+                android:text="Journeys"
+                android:textColor="#5c3d99"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/appTitle" />
 
-    <TextView
-        android:id="@+id/pageTitle"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:gravity="bottom|center"
-        android:textSize="35sp"
-        android:text="Journeys"
-        android:textColor="#5c3d99"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appTitle"
-         />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:contentDescription="Add"
-        android:src="@android:drawable/ic_input_add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:backgroundTint="#38A3A5" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/addbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:contentDescription="Add"
+                android:src="@android:drawable/ic_input_add"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:backgroundTint="#38A3A5" app:layout_constraintStart_toStartOf="parent"/>
 
-    <ImageView
-        android:id="@+id/noJourneyImg"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/pinpathimg"
-        android:layout_marginTop="150dp"
-        app:layout_constraintTop_toTopOf="@id/pageTitle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:visibility="invisible"
-        />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/refreshButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:contentDescription="Refresh"
+                android:src="@android:drawable/ic_popup_sync"
+                app:layout_constraintStart_toStartOf="parent"
+                app:backgroundTint="#38A3A5" android:layout_marginTop="44dp" android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/pageTitle"
+                app:layout_constraintTop_toBottomOf="@+id/appTitle"/>
+        <ImageView
+                android:id="@+id/noJourneyImg"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/pinpathimg"
+                android:layout_marginTop="150dp"
+                app:layout_constraintTop_toTopOf="@id/pageTitle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/noJourneyMsg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add a journey to get started"
-        android:textStyle="bold"
-        android:textColor="#57cc99"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/noJourneyImg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
-        />
+        <TextView
+                android:id="@+id/noJourneyMsg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add a journey to get started"
+                android:textStyle="bold"
+                android:textColor="#57cc99"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/noJourneyImg"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="invisible" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pageTitle" />
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pageTitle" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
