--- a/app/src/main/res/layout/activity_edit_journey.xml
+++ b/app/src/main/res/layout/activity_edit_journey.xml
@@ -344,7 +344,8 @@
                 android:layout_width="80dp"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:text="Next"
+                android:padding="0dp"
+                android:text="Update"
                 android:backgroundTint="#38A3A5"
                 android:textColor="#5B3198"
                 app:layout_constraintBottom_toBottomOf="parent"
